--- a/Counter/index.html
+++ b/Counter/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-    <main>
-      <div class="container">
-        <h1>counter</h1>
-        <span id="value">0</span>
-        <div class="button-container">
-          <button class="btn decrease">decrease</button>
-          <button class="btn reset">reset</button>
-          <button class="btn increase">increase</button>
-        </div>
-      </div>
-    </main>
+    <main class="main">
+            <div class="container section-center">
+                <h1 class="title">counter</h1>
+                <h3 class="number">0</h3>
+                <div class="btn-container">
+                    <button class="btn btn-decrease">decrease</button>
+                    <button class="btn btn-reset">reset</button>
+                    <button class="btn btn-increase">increase</button>
+                </div>
+            </div>
+        </main>
     <script src="src/app.js"></script>
 </body>
 </html>
