--- a/Color-Flipper/hex.html
+++ b/Color-Flipper/hex.html
@@ -10,22 +10,27 @@
   </head>
 
   <body>
-    <nav>
-      <div class="nav-center">
-        <h4>color flipper</h4>
-        <ul class="nav-links">
-          <li><a href="index.html">simple</a></li>
-          <li><a href="hex.html">hex</a></li>
-        </ul>
-      </div>
-    </nav>
-    <main>
-      <div class="container">
-        <h2>background color : <span class="color">#f1f5f8</span></h2>
-        <button class="btn btn-hero" id="btn">click me</button>
-      </div>
-    </main>
+     <nav class="nav">
+            <div class="navbar section-center">
+                <div class="logo">color flipper</div>
+                <div class="link-container">
+                    <a href="index.html" class="link">simple</a>
+                    <a href="index.html" class="link">hex</a>
+                </div>
+            </div>
+        </nav>
+        <main class="main">
+            <div class="main-container section-center">
+                <div>
+                    <p class="color-container">
+                        <span class="color-text">background color : </span
+                        ><span class="color">#00ff00</span>
+                    </p>
+                </div>
+                <button class="btn btn-color">click me</button>
+            </div>
+        </main>
     <!-- javascript -->
-    <script src="src/hex.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
